Used Payload as native JSON in the claims rather than as a string